# ATM562-Model-Tasks

./: .gitignore  CMakeLists.txt  draw.gs  grads_io.hpp  main.cpp
Inc/: MpiHandler.hpp  grads_io.hpp  main.hpp
Src/: MpiHandler.cpp  main.cpp
